@@ -16,6 +16,7 @@
     <ClInclude Include="Include\RE\RT\Starter.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Core__Memory.cpp" />
     <ClCompile Include="Sources\RT__Starter.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
